fix link word break in label but nowhere else

--- a/docs/_static/theme_overrides.css
+++ b/docs/_static/theme_overrides.css
@@ -2,7 +2,13 @@ a {
   overflow-wrap: break-word;
   word-wrap: break-word;
 
+  word-break: break-word;
+
   hyphens: auto;
+}
+
+.label a {
+  word-break: normal;
 }
 
 /* override table width restrictions */
